--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,57 @@
-form{
-    padding: 1em;
-    border: 1em;
-    background-color: rgb(63, 183, 219);
+body{
+    background-color:blueviolet;
+}
+div{
+    background-color:rgb(154, 65, 236);
+    position: absolute;
+    left:20%;
+    right:20%;
+    top:10%;
+    padding: 5em;
+     width: 600px;
+     height: 400px;
+
+}
+.name{
+  text-align: center;
+  font-weight: bolder;
+  font-size: 20px;
+  color:aliceblue;
+}
+
+.fullname, .contact, .description{ 
     
+   margin-left: 18%;
 }
-h1{
-    color: rgb(8, 6, 122);
+    
+
+.boton{
+    margin-left: 40%;
+    margin-right: 40%;
+    
+    width: 140px;
+    height: 40px;
+    border-radius: 10em;
+    background: #0cb9b9;
+
+    font-family: Arial;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    color: antiquewhite;
 }
+
+
+ul.horizontal{
+    margin:0;
+    padding:0;
+    }
+ul.horizontal li{
+    display:block;
+    float:left;
+    padding:0 10px;
+ }
+ a{
+     color: white;
+     font-size: 18px;
+ }
